--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -46,10 +46,9 @@
 {{ end }}
 
 <section class="relative my-10 first-of-type:mt-0 last-of-type:mb-0">
+  <time class="text-sm opacity-50">{{ delimit .Params.author ", " }}</time>
   <h2 class="!my-0 pb-1 !leading-none">{{ .Title }}</h2>
-  <time class="text-sm opacity-60"
-    >{{ .Date | time.Format ":date_medium" }}</time
-  >
+  <time class="text-sm opacity-60">{{ .Date | time.Format ":date_medium" }}</time>
   <a class="absolute inset-0" href="{{ .Permalink }}"></a>
 </section>
 {{ end }}
