--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -41,8 +41,10 @@
     <h3>Editors</h3>
     {{ range $author := $.Site.Params.authors }}
       <div display="flex" flex-direction="column">
-        <img src="https://unavatar.io/twitter/{{ $author.twitter_name }}" width="30px" style="display: inline-block; margin: 0.2rem; border-radius: 50%;" />
-        <div style="display: inline-block">@{{ $author.name }}</div>
+        <a href="https://twitter.com/{{ $author.twitter_name }}" target="_blank">
+          <img src="https://unavatar.io/twitter/{{ $author.twitter_name }}" width="30px" style="display: inline-block; margin: 0.2rem; border-radius: 50%;" />
+          <div style="display: inline-block">@{{ $author.name }}</div>
+        </a>
       </div>
     {{ end }}
   </div>
